# CompactStar

./: .clang-format  .gitignore  CMakeLists.txt  README.md  notes.txt
.github/workflows/: ci.yml
CompactStar/: CMakeLists.txt
CompactStar/ChemicalHeating/: CMakeLists.txt  ChemState.hpp  Config.hpp  Envelope.hpp  Microphysics.hpp
CompactStar/Core/: Analysis.hpp  Banner.hpp  CMakeLists.txt  CompactStarConfig.h  MixedStar.hpp  NStar.hpp  Prog.hpp  Pulsar.hpp  Pulsar_old.hpp  RotationSolver.hpp  SeqPoint.hpp  StarBuilder.hpp  StarProfile.hpp  TOVSolver.hpp  TOVSolver_Thread.hpp  TaskManager.hpp
CompactStar/Core/src/: Analysis.cpp  Banner.cpp  MixedStar.cpp  NStar.cpp  Prog.cpp  Pulsar.cpp  Pulsar_old.cpp  RotationSolver.cpp  StarBuilder.cpp  StarProfile.cpp  TOVSolver.cpp  TOVSolver_Old.cpp  TOVSolver_Thread.cpp  TaskManager.cpp
CompactStar/EOS/: Baryon.hpp  Common.hpp  CompOSE_EOS.hpp  CoulombLattice.hpp  Fermi_Gas.hpp  Lepton.hpp  Model.hpp  Particle.hpp  Polytrope.hpp  SigmaOmega.hpp  SigmaOmegaPar.hpp  SigmaOmegaRho.hpp  SigmaOmegaRho_nstar.hpp
CompactStar/EOS/src/: CompOSE_EOS.cpp  Model.cpp  Particle.cpp
CompactStar/Extensions/: CMakeLists.txt
CompactStar/Extensions/LightDM/: CMakeLists.txt  LightDM_Scalar_Density.hpp
CompactStar/Extensions/LightDM/src/: LightDM_Scalar_Density.cpp
CompactStar/Extensions/MixedStar/: CMakeLists.txt  DarkCore_Analysis.hpp
CompactStar/Extensions/MixedStar/src/: DarkCore_Analysis.cpp
CompactStar/Microphysics/: CMakeLists.txt
CompactStar/Microphysics/BNV/: CMakeLists.txt
CompactStar/Microphysics/BNV/Analysis/: BNV_Analysis.hpp  BNV_Sequence.hpp  CMakeLists.txt  Decay_Analysis.hpp
CompactStar/Microphysics/BNV/Analysis/src/: BNV_Analysis.cpp  BNV_Sequence.cpp  Decay_Analysis.cpp
CompactStar/Microphysics/BNV/Channels/: BNV_B_Chi_Combo.hpp  BNV_B_Chi_Photon.hpp  BNV_B_Chi_Transition.hpp  BNV_B_Psi_Pion.hpp  CMakeLists.txt
CompactStar/Microphysics/BNV/Channels/src/: BNV_B_Chi_Combo.cpp  BNV_B_Chi_Photon.cpp  BNV_B_Chi_Transition.cpp  BNV_B_Psi_Pion.cpp
CompactStar/Microphysics/BNV/Internal/: BNV_Chi.hpp  CMakeLists.txt
CompactStar/Microphysics/BNV/Internal/src/: BNV_Chi.cpp
CompactStar/Microphysics/Rates/: Urca.hpp
CompactStar/Physics/: BNV.hpp  CMakeLists.txt  Physics.hpp  Spin.hpp  Thermal.hpp
CompactStar/Physics/Driver/: CMakeLists.txt  IDriver.hpp
CompactStar/Physics/Driver/Chem/: CMakeLists.txt
CompactStar/Physics/Driver/Diagnostics/: DriverDiagnostics.hpp
CompactStar/Physics/Driver/Spin/: CMakeLists.txt  MagneticDipole.hpp
CompactStar/Physics/Driver/Spin/src/: MagneticDipole.cpp
CompactStar/Physics/Driver/Thermal/: CMakeLists.txt  HeatingFromChem.hpp  NeutrinoCooling.hpp  NeutrinoCooling_Details.hpp  PhotonCooling.hpp  PhotonCooling_Details.hpp
CompactStar/Physics/Driver/Thermal/Boundary/: CMakeLists.txt  EnvelopePotekhin1997.hpp  EnvelopePotekhin2003.hpp  IEnvelope.hpp  SurfaceGravity.hpp  TbDefinition.hpp
CompactStar/Physics/Driver/Thermal/Boundary/src/: EnvelopePotekhin1997.cpp  EnvelopePotekhin2003.cpp  SurfaceGravity.cpp  TbDefinition.cpp
CompactStar/Physics/Driver/Thermal/src/: NeutrinoCooling.cpp  NeutrinoCooling_Details.cpp  PhotonCooling.cpp  PhotonCooling_Details.cpp
CompactStar/Physics/Evolution/: CMakeLists.txt  DriverContext.hpp  EvolutionConfig.hpp  EvolutionSystem.hpp  GeometryCache.hpp  RHSAccumulator.hpp  StarContext.hpp  StateLayout.hpp  StatePacking.hpp  StateVector.hpp  System.hpp
CompactStar/Physics/Evolution/Diagnostics/: CMakeLists.txt  DiagnosticCatalog.hpp  DiagnosticPacket.hpp  DiagnosticsCatalogJson.hpp  DiagnosticsJson.hpp  Schema.hpp  UnitContract.hpp
CompactStar/Physics/Evolution/Diagnostics/src/: DiagnosticCatalog.cpp  DiagnosticPacket.cpp  DiagnosticsCatalogJson.cpp  DiagnosticsJson.cpp  UnitContract.cpp
CompactStar/Physics/Evolution/Integrator/: CMakeLists.txt  GSLIntegrator.hpp
CompactStar/Physics/Evolution/Integrator/src/: GSLIntegrator.cpp
CompactStar/Physics/Evolution/Observers/: CMakeLists.txt  DiagnosticsObserver.hpp  IObserver.hpp  TimeSeriesObserver.hpp
CompactStar/Physics/Evolution/Observers/src/: DiagnosticsObserver.cpp  IObserver.cpp  TimeSeriesObserver.cpp
CompactStar/Physics/Evolution/Run/: CMakeLists.txt  RunBuilder.hpp  RunObservers.hpp  RunPaths.hpp
CompactStar/Physics/Evolution/Run/src/: RunBuilder.cpp  RunObservers.cpp  RunPaths.cpp
CompactStar/Physics/Evolution/src/: EvolutionSystem.cpp  GeometryCache.cpp  StarContext.cpp  StateLayout.cpp  StatePacking.cpp  StateVector.cpp  System.cpp  System_old.cpp
CompactStar/Physics/State/: BNVState.hpp  CMakeLists.txt  ChemState.hpp  SpinState.hpp  State.hpp  Tags.hpp  ThermalState.hpp
CompactStar/Physics/State/src/: BNVState.cpp  ChemState.cpp  SpinState.cpp  ThermalState.cpp
docs/: Doxyfile
docs/doxygen_output/html/: _formulas.dvi  _formulas.tex  _formulas_dark.dvi  _formulas_dark.fdb_latexmk  _formulas_dark.fls  _formulas_dark.tex  annotated.html  classes.html  dir_01723a31f31d048945833fb116edbe8c.html  dir_02a6db77099817211a17bda10d4ae2bd.html  dir_04f134cb16f087fd6b50853b14ac454b.html  dir_063c1f821df77d47d1f3d6860fabd38d.html  dir_08e382c994e3a05c41bd11cca915daed.html  dir_09218ce5781f322bab7600e4896d280c.html  dir_0bf06ca91ab3c2f46b43da32c5dbeb8f.html  dir_0dc9fb609d8f0f0183541e3d1ae7225a.html  dir_0ed60261b86fc80b7de2ec0e910c5ef4.html  dir_0f1f32f1d8a8bdb3c39ecf143697a32d.html  (+259 more)
main/: CMakeLists.txt
main/Examples/: CMakeLists.txt  Table_5-8_Glenn.cpp  rotating_ns.cpp  sig_omega.cpp  sig_omega_rho_nstar.cpp
main/Test/: CMakeLists.txt  ns_build_main.cpp  psr_debug_main.cpp  spin_evol_2_main.cpp  spin_evol_main.cpp  spin_therm_evol_2_main.cpp  spin_therm_evol_main.cpp  tov_debug_main.cpp
main/Test/results/ds_test/: Testing_ds.tsv
main/Test/results/ns_build/: NStar_Profile.tsv
main/Test/results/spin_therm_evol/: spin_therm_evol_Sequence.tsv
main/Test/results/spin_therm_evol_2/: NStar_Profile.tsv  diagnostics.catalog.json  diagnostics.jsonl  timeseries.csv.meta.json
main/Test/results/tov_debug/: NStar_Profile.tsv.debug  tov_debug_Sequence.tsv
(+1676 files in other folders)
